re PR middle-end/14997 (ncurses build fails with Ada)

PR middle-end/14997
	* expr.c (expand_expr_real) <normal_inner_ref>: Force op0 to mem
	when we would be extracting outside its bit span (bitpos+bitsize
	larger than its mode), possible with some VIEW_CONVERT_EXPRs from
	Ada unchecked conversions.

Co-Authored-By: Eric Botcazou <ebotcazou@adacore.com>

From-SVN: r103963